# raytracer

./: .gitignore  Cargo.toml  Project Diagram.drawio  README.md  timings.md
documentation/: PBR.md  Project Diagram.drawio  timings.md
models/: floor.stl  medieval_house.mtl  teapot.stl  test.stl
src/: camera.rs  hit.rs  hittable.rs  iter_functions.rs  main.rs  material.rs  parser.rs  ray.rs  renderer.rs  test.stl  transformations.rs  vec.rs  window.rs
src/algebra/: axis.rs  color.rs  mod.rs  quaternion.rs  ray.rs  rot3.rs  vec3.rs
src/image/: image_chunk.rs  mod.rs  pixel_coordinate.rs
src/material/: map.rs  mod.rs
src/renderer/: image_chunk.rs  mod.rs  work_package.rs
src/renderer/compute/: mod.rs
src/renderer/ray_instancer/: mod.rs  pixel.rs  pixel_coordinate.rs
src/renderer/shader/: mod.rs  shade_package.rs
src/renderer/shader/reflective_model/: mod.rs
src/renderer/shader/refractive_model/: mod.rs
src/renderer/threading/: mod.rs
src/renderer/tracer/: mod.rs  pre_computed_world.rs  trace_package.rs  triangle_hit_parser.rs
src/renderer/tracer/bvh/: bounding_box.rs  mod.rs
src/scene/: camera.rs  light.rs  mod.rs  world.rs
src/shader/: mod.rs
src/shape/: cuboid.rs  mandelbulb.rs  mesh.rs  mod.rs  model.rs  polygon.rs  sphere.rs  triangle.rs
src/shape/phong_mesh/: mod.rs  phong_triangle.rs  phong_vertex.rs
src/shapes/: mandelbulb.rs  mod.rs  polygon.rs  sphere.rs
src/world/: bvh.rs  camera.rs  mod.rs  model.rs  parser.rs  triangle.rs  triangle_hit_parser.rs  vertex.rs
src/world/bvh/: bounding_box.rs  mod.rs
