[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = 2
incremental = true

[profile.release]
debug = true
incremental = true

[dependencies]
image = "0.24.5"
regex = "1.7.0"
show-image = { version = "0.13.1", features = ["image", "save"]}
rayon = "1.6.1"
fastrand = "1.9.0"
